# mcp-pdf

./: CHANGELOG.md  COMPLETION_SUMMARY.md  FIXES_SUMMARY.md  IMAGE_URL_VERIFICATION.md  MCP_CONFIGURATION.md  MERMAID_IMPLEMENTATION_SUMMARY.md  MERMAID_SUPPORT.md  OUTPUT_DIRECTORY.md  PROJECT_SUMMARY.md  README.md  USAGE_EXAMPLES.md  VERIFICATION_SUMMARY.md  pyproject.toml  requirements.txt  run_server.py  sample.py  test_claude_desktop_simulation.py  test_user_example.py  verify_image_functionality.py  zsh.md
src/mcp_pdf/: __init__.py  __main__.py  server.py
src/mcp_pdf/models/: __init__.py  document_spec.py  theme_spec.py
src/mcp_pdf/rendering/: __init__.py  pdf_generator.py
tests/: __init__.py  conftest.py  test_directory_fallback.py  test_image_urls.py  test_mermaid.py  test_models.py  test_pdf_generation.py
